# aermetric_testing_task

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
aermetric/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
aermetric/migrations/: 0001_initial.py  0002_rename_aircrafterrordata_aircraftstatdata.py
aermetric/tests/: factory.py  test_get_aircraft_stat_data.py
main/: settings.py  urls.py
