[tool.poetry]
name = "aermetric"
version = "0.3.0"
description = ""
authors = ["emilrakaev <emilrakaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
psycopg2 = "2.9.3"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
